--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -7,6 +7,7 @@
 @import "homepage";
 @import "profile";
 @import "comments";
+@import "search-results";
 
 // External CSS.
 @import url('https://meyerweb.com/eric/tools/css/reset/reset.css');
@@ -52,6 +53,11 @@ em {
 
 strong {
 	font-weight: bold;
+}
+
+sup {
+	font-size: 70%;
+	vertical-align: top;
 }
 
 blockquote {
@@ -116,4 +122,60 @@ footer {
 .svg-icon-button {
 	border: none;
 	background-color: transparent;
+}
+
+// Form styling.
+fieldset {
+	padding-top: 1em;
+        // For some reason this fixes some overflow issues on small viewports.
+        min-width: auto;
+
+        .item {
+                padding-bottom: 0.8rem;
+                        
+                h2 {
+			font-size: 1.4em;
+                        padding: 0;
+                }
+                        
+                label {
+                        pointer-events: none;
+                }
+
+                select, .button {
+                        display: block;
+                        background-color: lighten($light-grey, 8%);
+
+                        &:hover, &:focus {
+                                background-color: lighten($light-grey, 6%);
+                        }
+                }
+
+                input:not(.checkbox), select, textarea {
+                	width: 100%;
+                        font-size: 1.2em;
+                        border-radius: 0.2rem;
+                        border-color: $light-grey;
+                        border-style: solid;
+                        margin-top: 0.5em;
+                        padding: 0.2em;
+                        box-sizing: border-box;
+                }
+
+                textarea {
+                        resize: none;
+                }
+        }
+
+	.comment, .overhead-comment {
+                color: darken($light-grey, 30%);
+        }
+
+        .comment {
+                padding-top: 0.2em;
+        }
+
+        .overhead-comment {
+                padding-bottom: 0.6em;
+        }
 }
