--- a/templates/partials/account_form.html
+++ b/templates/partials/account_form.html
@@ -56,7 +56,7 @@
         {% endif %}
 
         {% if request.user.has_credential(creds.ACCOUNT_EDIT, approved=[user]) %}
-            <div class="item checkbox-item">
+            <div class="item">
                 <div>
                     <label for="id_inactive">{% trans %}Inactive{% endtrans %}:</label>
                     <input class="checkbox" id="id_inactive" type="checkbox" name="J" {% if inactive %}checked="checked"{% endif %}>
@@ -76,8 +76,8 @@
         </div>
 
         <!-- Hide Email -->
-        <div class="item checkbox-item">
-            <div class="button">
+        <div class="item">
+            <div>
                 <label for="id_hide">
                     {% trans %}Hide Email Address{% endtrans %}:
                 </label>
