Added '/addvote' and '/login'

--- a/templates/partials/account_form.html
+++ b/templates/partials/account_form.html
@@ -82,7 +82,7 @@
                     {% trans %}Hide Email Address{% endtrans %}:
                 </label>
 
-                <input class="checkbox"class="checkbox" id="id_hide" type="checkbox" name="H" value="{{ H }}">
+                <input class="checkbox" id="id_hide" type="checkbox" name="H" value="{{ H }}">
             </div>
             <p class="comment"><em>{{ "If you do not hide your email address, it is "
             "visible to all registered MPR users. If you hide your "
