--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -151,12 +151,13 @@ fieldset {
                         }
                 }
 
-                input:not(.checkbox), select, textarea {
+                input:not(.checkbox), select, textarea, .button {
                 	width: 100%;
                         font-size: 1.2em;
                         border-radius: 0.2rem;
                         border-color: $light-grey;
                         border-style: solid;
+			border-width: 0.15em;
                         margin-top: 0.5em;
                         padding: 0.2em;
                         box-sizing: border-box;
@@ -165,6 +166,15 @@ fieldset {
                 textarea {
                         resize: none;
                 }
+
+		.button {
+			text-align: center;
+			color: black;
+
+			&:hover {
+				cursor: default;
+			}
+		}
         }
 
 	.comment, .overhead-comment {
