--- a/templates/login.html
+++ b/templates/login.html
@@ -1,47 +1,36 @@
-{% extends 'partials/layout.html' %}
+<!DOCTYPE html>
+<html>
+	{% include "partials/head.html" %}
+	{% include "partials/navbar.html" %}
+	{% include "partials/archdev-navbar.html" %}
 
-{% block pageContent %}
+    <div id="dev-login" class="box">
+        <h2>MPR {% trans %}Login{% endtrans %}</h2>
 
-<div id="dev-login" class="box">
-    <h2>MPR {% trans %}Login{% endtrans %}</h2>
-
-    {% if request.user.is_authenticated() %}
-        <form action="/logout" method="post" class="link">
-            <p>
-                {{
-                    "Logged-in as: %s" | tr
-                    | format("<strong>%s</strong>" | format(request.user.Username))
-                    | safe
-                }}
-                <input type="hidden" name="next" value="{{ next }}" />
-                <button type="submit">[{{ "Logout" | tr }}]</button>
-            </p>
-        </form>
-    {% else %}
-        {% if request.url.scheme == "http" and config.getboolean("options", "disable_http_login") %}
-            {% set https_login = url_base.replace("http://", "https://") + "/login" %}
-            <p>
-            {{ "HTTP login is disabled. Please %sswitch to HTTPs%s if you want to login."
-            | tr
-            | format(
-                '<a href="%s">' | format(https_login),
-                "</a>")
-            | safe
-            }}
-            </p>
-        {% elif request.user.is_authenticated() %}
-            <p>
-            {{ "Logged-in as: %s"
-            | tr
-            | format("<b>%s</b>" | format(request.user.Username))
-            | safe
-            }}
-            <a href="/logout?next={{ next }}">[{% trans %}Logout{% endtrans %}]</a>
-            </p>
+        {% if request.user.is_authenticated() %}
+            <form action="/logout" method="post" class="link">
+                <fieldset>
+                    <div class="item">
+                        <h2>Logged-in as: <a href="/account/{{ request.user.Username }}">{{ request.user.Username }}</a></h2>
+                    </div>
+                    <div class="item">
+                        <input type="hidden" name="next" value="{{ next }}" />
+                        <input class="button" type="submit" value="{{ "Logout" | tr }}" />
+                    </div>
+                </fieldset>
+            </form>
         {% else %}
+            {% if request.url.scheme == "http" and config.getboolean("options", "disable_http_login") %}
+                {% set https_login = url_base.replace("http://", "https://") + "/login" %}
+                <p>{{ "HTTP login is disabled. Please %sswitch to HTTPs%s if you want to login." | tr | format('<a href="%s">' | format(https_login),"</a>") | safe }}</p>
+            
+            {% elif request.user.is_authenticated() %}
+            <p>{{ "Logged-in as: %s" | tr | format("<b>%s</b>" | format(request.user.Username)) | safe }} <a href="/logout?next={{ next }}">[{% trans %}Logout{% endtrans %}]</a></p>
+            
+            {% else %}
             <form method="post" action="/login?next={{ next }}">
                 <fieldset>
-                    <legend>{% trans %}Enter login credentials{% endtrans %}</legend>
+                    <legend class="overhead-comment"><em>{% trans %}Enter login credentials{% endtrans %}</em></legend>
 
                     {% if errors %}
                         <ul class="errorlist">
@@ -51,7 +40,7 @@
                         </ul>
                     {% endif %}
 
-                    <p>
+                    <div class="item">
                         <label for="id_username">
                             {% trans %}User name or primary email address{% endtrans %}:
                         </label>
@@ -59,35 +48,24 @@
                         <input id="id_username" type="text" name="user" size="30"
                                maxlength="254" autofocus="autofocus"
                                required="required" value="{{ user or '' }}">
-                    </p>
+                    </div>
 
-                    <p>
+                    <div class="item">
                         <label for="id_password">
                             {% trans %}Password{% endtrans %}:
                         </label>
-                        <input id="id_password" type="password" name="passwd"
-                               size="30" required="required">
-                    </p>
+                        <input id="id_password" type="password" name="passwd" size="30" required="required">
+                    </div>
 
-                    <p>
-                        <input id="id_remember_me" type="checkbox" name="remember_me"
-                            {% if remember_me %}
-                                checked="checked"
-                            {% endif %}
-                        >
-                        <label for="id_remember_me">
-                            {% trans %}Remember me{% endtrans %}
-                        </label>
-                    </p>
+                    <div class="item">
+                        <input class="checkbox" id="id_remember_me" type="checkbox" name="remember_me" {% if remember_me %}checked="checked"{% endif %}>
+                        <label for="id_remember_me">{% trans %}Remember me{% endtrans %}</label>
+                    </div>
 
-                    <p>
-                        <input class="button" type="submit"
-                               value="{% trans %}Login{% endtrans %}">
-                        <a href="/passreset">
-                            [{% trans %}Forgot Password{% endtrans %}]
-                        </a>
-                        <input id="id_referer" type="hidden" name="referer"
-                               value="{{ url_base }}">
+                    <div class="item">
+                        <input class="button" type="submit" value="{% trans %}Login{% endtrans %}">
+                        <a class="button" href="/passreset">{% trans %}Forgot Password{% endtrans %}</a>
+                        <input id="id_referer" type="hidden" name="referer" value="{{ url_base }}">
                         <input type="hidden" name="next" value="{{ next }}">
                     </p>
 
@@ -97,4 +75,4 @@
     {% endif %}
 </div>
 
-{% endblock %}
+{# vim: set ts=4 sw=4 expandtab: #}
