--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -189,3 +189,11 @@ fieldset {
                 padding-bottom: 0.6em;
         }
 }
+
+// Error lists.
+.errorlist {
+	li {
+		color: red;
+		opacity: 0.7;
+	}
+}
