--- a/templates/login.html
+++ b/templates/login.html
@@ -25,54 +25,48 @@
                 <p>{{ "HTTP login is disabled. Please %sswitch to HTTPs%s if you want to login." | tr | format('<a href="%s">' | format(https_login),"</a>") | safe }}</p>
             
             {% elif request.user.is_authenticated() %}
-            <p>{{ "Logged-in as: %s" | tr | format("<b>%s</b>" | format(request.user.Username)) | safe }} <a href="/logout?next={{ next }}">[{% trans %}Logout{% endtrans %}]</a></p>
+                <p>{{ "Logged-in as: %s" | tr | format("<b>%s</b>" | format(request.user.Username)) | safe }} <a href="/logout?next={{ next }}">[{% trans %}Logout{% endtrans %}]</a></p>
             
             {% else %}
-            <form method="post" action="/login?next={{ next }}">
-                <fieldset>
-                    <legend class="overhead-comment"><em>{% trans %}Enter login credentials{% endtrans %}</em></legend>
+                <form method="post" action="/login?next={{ next }}">
+                    <fieldset>
+                        <legend class="overhead-comment"><em>{% trans %}Enter login credentials{% endtrans %}</em></legend>
 
-                    {% if errors %}
-                        <ul class="errorlist">
-                            {% for error in errors %}
-                                <li>{{ error }}</li>
-                            {% endfor %}
-                        </ul>
-                    {% endif %}
+                        {% if errors %}
+                            <ul class="errorlist">
+                                {% for error in errors %}
+                                    <li>{{ error }}</li>
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
 
-                    <div class="item">
-                        <label for="id_username">
-                            {% trans %}User name or primary email address{% endtrans %}:
-                        </label>
+                        <div class="item">
+                            <label for="id_username">{% trans %}User name or primary email address{% endtrans %}:</label>
+                            <input id="id_username" type="text" name="user" size="30" maxlength="254" autofocus="autofocus" required="required" value="{{ user or '' }}">
+                        </div>
 
-                        <input id="id_username" type="text" name="user" size="30"
-                               maxlength="254" autofocus="autofocus"
-                               required="required" value="{{ user or '' }}">
-                    </div>
+                        <div class="item">
+                            <label for="id_password">{% trans %}Password{% endtrans %}:</label>
+                            <input id="id_password" type="password" name="passwd" size="30" required="required">
+                        </div>
 
-                    <div class="item">
-                        <label for="id_password">
-                            {% trans %}Password{% endtrans %}:
-                        </label>
-                        <input id="id_password" type="password" name="passwd" size="30" required="required">
-                    </div>
+                        <div class="item">
+                            <input class="checkbox" id="id_remember_me" type="checkbox" name="remember_me" {% if remember_me %}checked="checked"{% endif %}>
+                            <label for="id_remember_me">{% trans %}Remember me{% endtrans %}</label>
+                        </div>
 
-                    <div class="item">
-                        <input class="checkbox" id="id_remember_me" type="checkbox" name="remember_me" {% if remember_me %}checked="checked"{% endif %}>
-                        <label for="id_remember_me">{% trans %}Remember me{% endtrans %}</label>
-                    </div>
-
-                    <div class="item">
-                        <input class="button" type="submit" value="{% trans %}Login{% endtrans %}">
-                        <a class="button" href="/passreset">{% trans %}Forgot Password{% endtrans %}</a>
-                        <input id="id_referer" type="hidden" name="referer" value="{{ url_base }}">
-                        <input type="hidden" name="next" value="{{ next }}">
-                    </p>
-
-                </fieldset>
-            </form>
+                        <div class="item">
+                            <input class="button" type="submit" value="{% trans %}Login{% endtrans %}">
+                            <a class="button" href="/passreset">{% trans %}Forgot Password{% endtrans %}</a>
+                            <input id="id_referer" type="hidden" name="referer" value="{{ url_base }}">
+                            <input type="hidden" name="next" value="{{ next }}">
+                        </div>
+                    </fieldset>
+                </form>
+            {% endif %}
         {% endif %}
-    {% endif %}
-</div>
+    </div>
 
+    {% include "partials/footer.html" %}
+</html>
 {# vim: set ts=4 sw=4 expandtab: #}
