--- a/media/scss/comments.scss
+++ b/media/scss/comments.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-$comment-mobile-view: 760px;
+$comment-mobile-view: 47.5em;
 
 .comments {
 		hr:nth-child(2) {
@@ -64,6 +64,10 @@ $comment-mobile-view: 760px;
 			.svg-icon-button {
 				margin: 0;
 			}
+
+			fieldset {
+				padding-top: 0;
+			}
 		}
 	}
 
@@ -92,7 +96,10 @@ $comment-mobile-view: 760px;
 	.comment-form {
 		padding: 0.5em 0;
 		border-radius: 0.2em;
-		display: none;
+
+		&:not(.add-comment) {
+			display: none;
+		}
 		
 		fieldset {
 			background-color: lighten($light-grey, 5%);
@@ -137,5 +144,9 @@ $comment-mobile-view: 760px;
 				align-items: start;
 			}
 		}
+	}
+
+	.comment-deleted {
+		opacity: 0.5;
 	}
 }
