--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -8,6 +8,7 @@
 @import "profile";
 @import "comments";
 @import "search-results";
+@import "packages";
 
 // External CSS.
 @import url('https://meyerweb.com/eric/tools/css/reset/reset.css');
@@ -86,7 +87,7 @@ pre {
 	overflow: auto;
 
 	code {
-		line-height: 1.6em;
+		line-height: 1.4em;
 	}
 }
 
@@ -108,6 +109,11 @@ footer {
 	margin-bottom: 2em;
 	padding: 1em;
 	border-radius: 0.15em;
+
+	@media (max-width: 27em) {
+		margin: 0 1em;
+		margin-bottom: 1em;
+	}
 	
 	h2 {
 		padding-bottom: 0.5em;
