--- a/templates/packages/show.html
+++ b/templates/packages/show.html
@@ -1,24 +1,21 @@
-{% extends "partials/layout.html" %}
-
-{% block pageContent %}
-    {% include "partials/packages/search.html" %}
-    <div id="pkgdetails" class="box">
-        <h2>{{ 'Package Details' | tr }}: {{ package.Name }} {{ package.Version }}</h2>
-
-        {% include "partials/packages/actions.html" %}
-
-        {% set show_package_details = True %}
-        {% include "partials/packages/details.html" %}
-
-        <div id="metadata">
-            {% include "partials/packages/package_metadata.html" %}
-        </div>
-    </div>
+<!DOCTYPE html>
+<html>
+	{% include "partials/head.html" %}
+	{% include "partials/navbar.html" %}
+	{% include "partials/archdev-navbar.html" %}
+    
+    {% include "partials/packages/package_details.html" %}
 
     <!-- On-the-fly comment editing functions -->
     <script type="text/javascript" src="/static/js/comment-edit.js"></script>
 
     {% set pkgname = package.Name %}
     {% set pkgbase_id = pkgbase.ID %}
-    {% include "partials/packages/comments.html" %}
-{% endblock %}
+
+    <div class="comments">
+        {% include "partials/packages/comments.html" %}
+    </div>
+
+    {% include "partials/footer.html" %}
+</html>
+{# vim: set ts=4 sw=4 expandtab: #}
