--- a/templates/partials/packages/comment.html
+++ b/templates/partials/packages/comment.html
@@ -7,37 +7,43 @@
 
 {% if not comment.Deleter or request.user.has_credential(creds.COMMENT_VIEW_DELETED, approved=[comment.Deleter]) %}
 	<h4 id="comment-{{ comment.ID }}" class="{{ header_cls }}">
-		{% set commented_at = comment.CommentTS | dt | as_timezone(timezone) %}
-		{% set view_account_info = 'View account information for %s' | tr | format(comment.User.Username) %}
-		{{
-		"%s commented on %s" | tr | format(
-			('<a href="/account/%s" title="%s">%s</a>' | format(
-				comment.User.Username,
-				view_account_info,
-				comment.User.Username
-			)) if request.user.is_authenticated() else
-			(comment.User.Username),
-			'<a href="#comment-%s" class="date">%s</a>' | format(
-				comment.ID,
-				commented_at.strftime("%Y-%m-%d %H:%M")
-			)
-		)
-		| safe
-		}}
-		{% if comment.Editor %}
-			{% set edited_on = comment.EditedTS | dt | as_timezone(timezone) %}
-			<span class="edited">
-				({{ "edited on %s by %s" | tr
-				| format(edited_on.strftime('%Y-%m-%d %H:%M'),
-				'<a href="/account/%s">%s</a>' | format(
-				comment.Editor.Username, comment.Editor.Username))
-				| safe
-				}})
-			</span>
-        {% endif %}
-
-        {% include "partials/comment_actions.html" %}
+		<div class="comment-title">
+			<p class="comment-intro">
+				{% set commented_at = comment.CommentTS | dt | as_timezone(timezone) %}
+				{% set view_account_info = 'View account information for %s' | tr | format(comment.User.Username) %}
+				{{ "%s commented on %s" | tr | format(
+                    ('<a href="/account/%s" title="%s">%s</a>'
+                    | format(comment.User.Username, view_account_info, comment.User.Username)
+                ) if request.user.is_authenticated() else
+			        (comment.User.Username),
+			        '<a href="#comment-%s" class="date">%s</a>' | format(comment.ID,
+				    commented_at.strftime("%Y-%m-%d %H:%M")
+			        )
+		        )
+                | safe }}
+            </p>
+		    
+            {% if comment.Editor %}
+			    {% set edited_on = comment.EditedTS | dt | as_timezone(timezone) %}
+			    <span class="edited">
+                    <em>{{ "edited on %s by %s" | tr
+				           | format(
+                                 edited_on.strftime('%Y-%m-%d %H:%M'),
+				                 '<a href="/account/%s">%s</a>' | format(
+				                 comment.Editor.Username,
+                                 comment.Editor.Username)
+                             )
+				           | safe
+				        }}</em>
+			    </span>
+            {% endif %}
+        </div>
+        
+        <div class="comment-actions">
+            {% include "partials/comment_actions.html" %}
+        </div>
     </h4>
 
     {% include "partials/comment_content.html" %}
+    {% include "partials/packages/comment_form.html" %}
 {% endif %}
