--- a/templates/pkgbase/index.html
+++ b/templates/pkgbase/index.html
@@ -1,23 +1,20 @@
-{% extends "partials/layout.html" %}
+<!DOCTYPE html>
+<html>
+    {% include "partials/head.html" %}
+	{% include "partials/navbar.html" %}
+	{% include "partials/archdev-navbar.html" %}
 
-{% block pageContent %}
-    {% include "partials/packages/search.html" %}
-    <div id="pkgdetails" class="box">
-        <h2>{{ 'Package Base Details' | tr }}: {{ pkgbase.Name }}</h2>
-
-        {% set result = pkgbase %}
-        {% include "partials/packages/actions.html" %}
-        {% include "partials/packages/details.html" %}
-
-        <div id="metadata">
-            {% include "partials/packages/pkgbase_metadata.html" %}
-        </div>
-    </div>
+    {% include "pkgbase/package_details.html" %}
 
     <!-- On-the-fly comment editing functions -->
     <script type="text/javascript" src="/static/js/comment-edit.js"></script>
 
-    {% set pkgname = result.Name %}
-    {% set pkgbase_id = result.ID %}
-    {% include "partials/packages/comments.html" %}
-{% endblock %}
+    {% set pkgbase_id = pkgbase.ID %}
+
+    <div class="comments">
+        {% include "partials/packages/comments.html" %}
+    </div>
+
+    {% include "partials/footer.html" %}
+</html>
+    {# vim: set ts=4 sw=4 expandtab: #}
