--- a/templates/pkgbase/flag-comment.html
+++ b/templates/pkgbase/flag-comment.html
@@ -1,7 +1,10 @@
-{% extends "partials/layout.html" %}
-
-{% block pageContent %}
-    <div class="box">
+ <!DOCTYPE html>
+<html>
+	{% include "partials/head.html" %}
+	{% include "partials/navbar.html" %}
+	{% include "partials/archdev-navbar.html" %}
+    
+    <div class="box field">
         <h2>{{ "Flagged Out-of-Date Comment: %s" | tr | format(pkgbase.Name) }}</h2>
 
         {# Prepare wrapping for the username. #}
@@ -34,13 +37,12 @@
                 <p>{{ pkgbase.FlaggerComment }}</p>
             </blockquote>
         </div>
-
-        <form action="/pkgbase/{{ pkgbase.Name }}">
+        
+        <form class="item" action="/pkgbase/{{ pkgbase.Name }}">
             <input type="submit" value="{{ 'Return to Details' | tr }}" />
         </form>
-
-        {# Padding #}
-        <p></p>
-
     </div>
-{% endblock %}
+
+    {% include "partials/footer.html" %}
+</html>
+{# vim: set ts=4 sw=4 expandtab: #}
