--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -1,6 +1,5 @@
 {% extends 'partials/layout.html' %}
-
-{% block pageContent %}
+{% block body %}
     <div id="error-page" class="box">
         <h2>404 - {% trans %}Page Not Found{% endtrans %}</h2>
         <p>{% trans %}Sorry, the page you've requested does not exist.{% endtrans %}</p>
